// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalize-page > /404 page 1`] = `
{
  "activeIndex": 0,
  "activePath": [],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": undefined,
  "directories": [
    {
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDirectories": [
    {
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > /500 page 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "name": "500",
      "route": "/500",
      "theme": {
        "layout": "raw",
      },
      "title": "500",
      "type": "page",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "raw",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "page",
  "directories": [
    {
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDirectories": [
    {
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "name": "ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "name": "typescript",
      "route": "",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "name": "ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "name": "typescript",
          "route": "",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "name": "ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "name": "typescript",
      "route": "",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "name": "ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "typescript",
      "route": "",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "isUnderCurrentDocsTree": true,
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "isUnderCurrentDocsTree": true,
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "isUnderCurrentDocsTree": true,
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "isUnderCurrentDocsTree": true,
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "name": "ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;
